--- a/assets/css/sidebar.scss
+++ b/assets/css/sidebar.scss
@@ -43,7 +43,8 @@
 
       .v-list-item__title {
         color: #00c3e1 !important;
-        font-weight: bold !important;
+
+        // font-weight: bold !important;
       }
     }
   }
@@ -73,7 +74,8 @@
 
         .v-list-item__title {
           color: #00c3e1 !important;
-          font-weight: bold !important;
+
+          // font-weight: bold !important;
         }
       }
     }
